--- a/static/styleMain.css
+++ b/static/styleMain.css
@@ -4,6 +4,18 @@
     #brandText {
         display: none;
     }
+    #telegramText {
+        display: none;
+    }
+    #instaText {
+        display: none;
+    }
+    #faceText {
+        display: none;
+    }
+    #vkText {
+        display: none;
+    }
     #loginButton {
         width: 150px;
         height: 60px;
@@ -64,17 +76,24 @@
         width: 100%;
         margin-bottom: 2rem;
     }
+    .helloText {
+        display: none;
+        font-size: 16px;
+        color: white;
+        margin-top: 1rem;
+        margin-right: 2rem;
+    }
     .connectionButton {
-        height: 30px !important;
-        width: 30px !important;
+        height: 45px !important;
+        width: 45px !important;
         border-radius: 50%;
         background-color: transparent;
         border: 0px solid transparent;
         margin-right: 2.5rem;
     }
     .connectionPhoto {
-        height: 30px !important;
-        width: 30px !important;
+        height: 45px !important;
+        width: 45px !important;
     }
     .connectionText {
         margin-right: 2rem;
@@ -91,11 +110,22 @@
     }
 }
 
+#dontWorks {
+    display: none;
+}
+
 @media(min-width: 1001px) {
     #carouselId {
         width: 60%;
         margin-bottom: 2rem;
         margin-top: 1rem;
+    }
+    .helloText {
+        display: none;
+        font-size: 22px;
+        color: white;
+        margin-top: 1rem;
+        margin-right: 2rem;
     }
     .carousel {
         width: 60%;
