--- a/static/styleMain.css
+++ b/static/styleMain.css
@@ -100,8 +100,8 @@
     }
     .photoVeronica {
         margin-top: 1rem;
-        width: 99%;
-        height: 85%;
+        width: 320px;
+        height: 195 px;
     }
     .photos1 {
         margin-top: 1rem;
